--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "express": "^3.5.0",
     "express-session": "^1.13.0",
+    "express3-handlebars": "^0.5.0",
     "body-parser": "^1.15.1",
     "multer": "^1.1.0",
     "ejs": "^2.4.1",
-    "formidable": "^1.0.17"
+    "formidable": "^1.0.17",
+    "q": "^1.0.1"
 
   }
 }
