Management of the login/logout flow
- Used session variable to memorize the current flow of the user;
- An error is shown when the user fails the login in the system;

--- a/config/config.json
+++ b/config/config.json
@@ -6,8 +6,8 @@
 		"cls": 0
 	},
 	"authentication": {
-		"username": "dregle",
-		"password": "elgerd"
+		"username": "dreagle",
+		"password": "elgaerd"
 	},
 	"firmware": {
 		"version": "0.1",
