--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.1.0",
     "ejs": "^2.4.1",
     "formidable": "^1.0.17",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "jsonfile" : "^2.3.1"
   }
 }
