--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.4.1",
     "formidable": "^1.0.17",
     "q": "^1.0.1",
-    "jsonfile" : "^2.3.1"
+    "jsonfile" : "^2.3.1",
+    "body-parser": "^1.15.1"
   }
 }
